# 2023_ASUS_PDN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: AStarRouter.cpp.D1E2A9929F0002BF.idx  AStarRouter.h.B9176A85724D5EDC.idx  AddCapacity.cpp.51BFEB31EBC46043.idx  AddCapacity.h.65CAE5829791F8B9.idx  DB.h.DAF956C5588763FF.idx  DetailedDB.h.9A0797B6F0F430F5.idx  DetailedMgr.cpp.00517E6EA12F9181.idx  DetailedMgr.h.A92BDAA61F4FC38B.idx  FlowLP.cpp.16B5FAF77CF666AE.idx  FlowLP.h.1C24064BD6F954E6.idx  GlobalMgr.cpp.2DDC6F8937EFA935.idx  GlobalMgr.h.E1821A418312D2C2.idx  Include.h.6F9EE2EDE5A7B0D4.idx  Layer.h.557B13B5029CFC6C.idx  LayerILP.cpp.B4B9E93939005570.idx  LayerILP.h.CAB602427D5F93E2.idx  Net.h.85F5F6A855A5F6EB.idx  NetworkILP.cpp.C1D36EB5259B4E4A.idx  NetworkILP.h.CE0EE6786FBA4D56.idx  NetworkMgr.cpp.00375B067D906A52.idx  NetworkMgr.h.613B462FB91343E3.idx  Obstacle.h.32FA3D834F3CEBD3.idx  Parser.cpp.5857FB64103580F4.idx  Parser.h.6804A53D4B73E0EC.idx  PreMgr.cpp.70FFF7455E5A24FC.idx  PreMgr.h.5EF5B3C091DC62FF.idx  Printer.cpp.36DDDFFE835C5576.idx  Printer.h.7A6751F1B1E2BB30.idx  RANAS.cpp.E0CF99716B782576.idx  RGraph.cpp.EDE6AE574D3BB3F2.idx  RGraph.h.31E16016D981A5BF.idx  RGraph.h.B1E17B778E51F609.idx  SVGPlot.cpp.89B066E8D6DE7762.idx  SVGPlot.h.46BD77FD0B4BD6A9.idx  Shape.cpp.C905D5223A925855.idx  Shape.h.7CA9FD00C176C6F8.idx  TEdge.h.945B906615C1C678.idx  TNode.h.83055DEA0E8CA14F.idx  Tile.h.F9E42EEE2C1D6735.idx  Via.h.655ABAFD5678D9C2.idx  (+7 more)
app/: CMakeLists.txt  main.cpp
cmake/: FindCPLEX.cmake  FindGUROBI.cmake
exp/output/: currentColorMap.txt  db_test.html  plotColorMap.m  plotColorMap_v2.m  test.html  test0.html  test1.html  test10.html  test11.html  test12.html  test13.html  test14.html  test15.html  test16.html  test17.html  test2.html  test3.html  test4.html  test5.html  test6.html  test7.html  test9.html  voltageColorMap.txt
src/: CMakeLists.txt  DB.h  Include.h  Layer.h  Net.h  NetworkILP.cpp  NetworkILP.h  NetworkMgr.cpp  NetworkMgr.h  Obstacle.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  RGraph.h  SVGPlot.cpp  SVGPlot.h  Shape.h  TEdge.h  TNode.h  Tile.h  Via.h
src/base/: CMakeLists.txt  DB.h  Include.h  Layer.h  Net.h  Obstacle.h  OutputWriter.h  Parser.cpp  Parser.h  SVGPlot.cpp  SVGPlot.h  Shape.cpp  Shape.h  Via.h
src/detailed/: AStarRouter.cpp  AStarRouter.h  CMakeLists.txt  DetailedDB.h  DetailedMgr.cpp  DetailedMgr.h  RGraph.h  TEdge.h  TNode.h
src/global/: AddCapacity.cpp  AddCapacity.h  CMakeLists.txt  FlowILP.h  FlowLP.cpp  FlowLP.h  GlobalMgr.cpp  GlobalMgr.h  LayerILP.cpp  LayerILP.h  NetworkILP.cpp  NetworkILP.h  NetworkMgr.cpp  NetworkMgr.h  OASG.h  PreMgr.cpp  PreMgr.h  RGraph.cpp  RGraph.h  VoltCP.cpp  VoltCP.h  VoltEigen.cpp  VoltEigen.h  VoltSLP.cpp  VoltSLP.h
triangle/: A.1.edge  A.1.ele  A.1.node  A.1.poly  DT  DT.1.ele  DT.1.node  DT.1.poly  DT.cpp  DT.in  DT.poly  obs.1.ele  obs.1.node  obs.1.poly  obs.poly  showme  triangle
